@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-20T01:09:10Z",
-  "count_outdated" : 52,
-  "uniques_outdated" : 33,
-  "count" : 92,
-  "uniques" : 58,
+  "timestamp" : "2022-05-20T16:19:13Z",
+  "count_outdated" : 59,
+  "uniques_outdated" : 39,
+  "count" : 98,
+  "uniques" : 63,
   "clones" : [
-    {
-      "timestamp": "2022-05-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 7 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 6 ]
-    },
     {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 23,
