@@ -1,12 +1,7 @@
 {
-  "count": 40,
-  "uniques": 18,
+  "count": 39,
+  "uniques": 17,
   "clones": [
-    {
-      "timestamp": "2022-05-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 23,
