@@ -1,3 +1,10 @@
+2022-05-20T16:19:13Z:
+* notice: last 14d: unq all: 17 39
+* notice: prev accum: outdated-unq outdated-all / unq all: 33 52 / 58 92
+* notice: next accum: outdated-unq outdated-all / unq all: 39 59 / 63 98
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: changed dates: []
+
 2022-05-20T01:09:10Z:
 * notice: last 14d: unq all: 18 40
 * notice: prev accum: outdated-unq outdated-all / unq all: 33 52 / 63 98
